<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".relation.activity.CreateGroupActivity">
    <RelativeLayout
        android:id="@+id/create_group_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorWrite"
        >
        <ImageView
            android:id="@+id/create_group_image_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/common_icon_back_n"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="12dp"
            />
        <TextView
            android:id="@+id/create_group_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorMorePop"
            android:text="@string/create_group_text_name"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="36dp"

            />
    </RelativeLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/create_group_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_group_header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="2dp"
        android:background="@color/colorWrite"
        >
        <ImageView
            android:id="@+id/create_group_image_header"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/group_head_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            />
        <EditText
            android:id="@+id/create_group_edit_name"
            android:layout_width="184dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_group_image_header"
            android:layout_marginTop="30dp"
            android:background="@drawable/group_name_radius"
            android:hint="@string/create_group_edit_name"
            android:textColor="@color/colorRadioText"
            android:textSize="14sp"
            android:paddingLeft="15dp"
            android:maxLength="20"
            />
        <EditText
            android:id="@+id/create_group_edit_introduce"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:background="@drawable/group_introduce_radius"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_group_edit_name"
            android:textSize="12sp"
            android:hint="@string/color_create_group_edit"
            android:gravity="top|left"
            android:layout_marginTop="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />
        <TextView
            android:id="@+id/create_group_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_text"
            android:textColor="@color/color_group_text"
            app:layout_constraintRight_toRightOf="@id/create_group_edit_introduce"
            app:layout_constraintBottom_toBottomOf="@id/create_group_edit_introduce"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:textSize="10sp"
            />
    </android.support.constraint.ConstraintLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/color_create_group_button"
        android:textColor="@color/colorWrite"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:background="@drawable/create_group_button"
        android:textSize="20sp"
        />
</android.support.constraint.ConstraintLayout>